adding an image to HOTLINE BURGERS Cmr

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h1>BIENVENU chez PISOFT new tech</h1>
     <p>Votre satisfaction est notre priorité</p>
     <p>I insert here a new line of the project</p>
+    <div>
+        <img src="Images/79cec1604b6a713b4830dd9d685c1aa9.jpg" alt="Gilles_NGASSAM_curriculum_Vitae" width="80%">
+    </div>
 </body>
 </html>
