--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1>BIENVENU chez PISOFT new tech</h1>
     <p>Votre satisfaction est notre priorité</p>
-    <p>I insert here a new line of the project</p>
+    <p>This is where I will learn how Emergency works</p>
 </body>
 </html>
