adding a new image to our website

--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
     <div>
         <img src="Images/79cec1604b6a713b4830dd9d685c1aa9.jpg" alt="Gilles_NGASSAM_curriculum_Vitae" width="80%">
     </div>
+    <p>This is the first file in my new Git Repo.</p>
+    <p>A new line in our file!</p>
+    <div>
+        <img src="Images/CV_PRO.jpg" alt="Hello Git" style="width:100%;max-width:640px">
+    </div>
 </body>
 </html>
