Adding a subconclusion to my learning

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <div>
         <img src="Images/CV_PRO.jpg" alt="Hello Git" style="width:90%;max-width:520px">
     </div>
-
+    <p>Here I reach a milestone in my learning path</p>
 </body>
 </html>
